Додав сторінку "Портфоліо", тегову розмітку та початкові стилі до неї

--- a/css/styles.css
+++ b/css/styles.css
@@ -128,3 +128,12 @@ Hover кнопки: #188CE8;
 }
 
  
+/* Стилі сторінки "Портфоліо" */
+/* Фільрти */
+
+
+/* Проекти */
+
+.projects h3 {
+    color: var(--title-text-color);
+}
