--- a/css/styles.css
+++ b/css/styles.css
@@ -30,13 +30,19 @@ Hover кнопки: #188CE8;
 
 /* Загальні стилі сайту */
 
-.page {
-    background-color: var(primary-bg-color);
+body {
+    background-color: var(--primary-white-color);
     color: var(--primary-text-color);
+    font-family: Roboto, sans-serif;
+    letter-spacing: 0.03em;
 }
 
 .list {
     list-style: none;
+}
+
+button {
+    font-family: inherit;
 }
 
 /* Шапка сайту */
@@ -44,6 +50,9 @@ Hover кнопки: #188CE8;
 
 .logo {
     color: #000000;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.2;
 }
 
 .footer .logo{
@@ -58,6 +67,10 @@ Hover кнопки: #188CE8;
 
 .site-nav .link {
     color: var(--title-text-color);
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 }
 
 .site-nav .link:hover,
@@ -72,6 +85,11 @@ Hover кнопки: #188CE8;
 /* Контакти в шапці */
 .header-contacts .link {
     color: var(--primary-text-color);
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
 }
 
 .header-contacts .link:hover,
@@ -88,12 +106,23 @@ Hover кнопки: #188CE8;
 
 .hero-title {
     color: var(--primary-white-color);
+    font-family: 'Roboto';
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-transform: uppercase;
+    letter-spacing: 0.06em;
+
 }
 
 .hero-btn {
     background-color: var(--acent-color);
     color: var(--primary-white-color);
     border: none;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
 }
 
 .hero-btn:hover,
@@ -152,6 +181,9 @@ Hover кнопки: #188CE8;
     background-color: var(--button-bg-color);
     color: var(--title-text-color);
     border: none;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
 }
 
 .filter-btn:hover,
