--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,9 @@
 Колір заголовків: #212121;
 
 Основний колір фону: #ffffff;
+Чорний колір: #000000;
+
+
 Додатковий колір фону: #2F303A;
 Додатквоий колір фону: #F5F4FA;
 Акцент: #2196F3;
@@ -20,11 +23,15 @@ Hover кнопки: #188CE8;
 
 
     --primary-white-color: #ffffff;
+    --black-color: #000000;
 
     --secondary-bg-color: #2F303A;
     --tertiary-bg-color: #F5F4FA;
     --acent-color: #2196F3;
     --button-bg-color: #F5F4FA;
+
+    --contacts-link-color: rgba(255, 255, 255, 0.6);
+    --hero-btn-hover:#188CE8;
 }
 
 
@@ -34,11 +41,10 @@ body {
     background-color: var(--primary-white-color);
     color: var(--primary-text-color);
     font-family: Roboto, sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71px;
     letter-spacing: 0.03em;
-}
-
-.link {
-    text-decoration: none;
 }
 
 .list {
@@ -53,10 +59,12 @@ button {
 /* Логотип */
 
 .logo {
-    color: #000000;
+    font-family: Raleway, sans-serif;
+    color: var(--black-color);
     font-weight: 700;
     font-size: 26px;
     line-height: 1.2;
+    text-decoration: none;
 }
 
 .footer .logo{
@@ -75,6 +83,7 @@ button {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+    text-decoration: none;
 }
 
 .site-nav .link:hover,
@@ -94,10 +103,34 @@ button {
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
+    text-decoration: none;
 }
 
 .header-contacts .link:hover,
 .header-contacts .link:focus {
+    color: var(--acent-color);
+}
+
+/* Підвал */
+
+.footer {
+    background-color: var(--secondary-bg-color);
+}
+
+.address .text {
+    color: var(--primary-white-color);
+    font-style: normal;
+    font-size: 14px;
+    line-height: 1.71;
+}
+
+.address .link {
+    color: var(--contacts-link-color);
+    text-decoration: none;
+}
+
+.address .link:hover,
+.address .link:focus {
     color: var(--acent-color);
 }
 
@@ -114,9 +147,9 @@ button {
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
+    text-align: center;
     text-transform: uppercase;
     letter-spacing: 0.06em;
-
 }
 
 .hero-btn {
@@ -127,54 +160,49 @@ button {
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.06em;
+    text-align: center;
 }
 
 .hero-btn:hover,
 .hero-btn:focus {
-    background-color: #188CE8;
+    background-color: var(--hero-btn-hover);
 }
 
 /* Секція */
 
 .section-title {
     color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
 }
 
 /* Особливості */
 
 .feature-list .title {
     color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
 }
 
 /* Наша команда */
 
 .section.team {
     background-color: var(--tertiary-bg-color);
+    text-align: center;
 }
 
 .cards .title {
     color: var(--title-text-color);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
 }
 
 
-/* Підвал */
-
-.footer {
-    background-color: var(--secondary-bg-color);
-}
-
-.address .text {
-    color: var(--primary-white-color);
-}
-
-.address .link {
-    color: rgba(255, 255, 255, 0.6);
-}
-
-.address .link:hover,
-.address .link:focus {
-    color: var(--acent-color);
-}
 
  
 /* Стилі сторінки "Портфоліо" */
@@ -198,7 +226,14 @@ button {
 
 /* Проекти */
 
-.projects h3 {
+.projects .title {
     color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2.0;
+    letter-spacing: 0.06em;
 }
 
+.projects .text {
+    line-height: 1.88;
+}
